--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img src="foto.jpeg" alt="Imagen Personal">
+        </div>
+        <div>
+            <h1>Norangel Marín</h1>
+            <h2>Bachiller en Ciencias</h2>
+        </div>
+    </header>
 </body>
 </html>
