empezando el main

--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -16,5 +16,18 @@
             <h2>Bachiller en Ciencias</h2>
         </div>
     </header>
+    <main>
+        <article>
+            <h3>Sobre mí...</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestiae natus eum et quo obcaecati a dignissimos cupiditate saepe, voluptatum earum itaque dolor? Asperiores esse rem, et velit ipsam sequi molestias dolorem, ipsa autem in minus quas labore excepturi. Nostrum minima quis vel fugiat totam accusantium suscipit molestias enim sit.</p>
+        </article>
+        <article>
+            <h3>Educación</h3>
+            
+        </article>
+
+    </main>
+
+
 </body>
 </html>
