plus en el main

--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -23,9 +23,35 @@
         </article>
         <article>
             <h3>Educación</h3>
-            
+            <dl>
+                <dt>Unidad Educativa Colegio "Nuestra Señora del Camino"</dt>
+                <dd>Hasta el 2018.</dd>
+                <dd>Ubicado en Guatire-Edo.Miranda.</dd>
+            </dl>
         </article>
+        <article>
+            <h3>Cursos</h3>
+            <dl>
+                <dt>Introducción al Desarrollo Web I</dt>
+                <dd>Instituto de Economía Internacional - Universidad de Alicante, España.</dd>
+                <dd>Enero, 2021</dd>
 
+                <dt>Ciberseguridad en el Teletrabajo</dt>
+                <dd>Instituto Nacional de Ciberseguridad, España.</dd>
+                <dd>Diciembre, 2020</dd>
+
+                <dt>Identidades Gráficas Efectivas</dt>
+                <dd>Universidad Católica Andrés Bello, Venezuela.</dd>
+                <dd>Agosto, 2020.</dd>
+
+                <dt>Redacción en Redes Sociales</dt>
+                <dd>Colegio Nacional de Periodistas, Venezuela.</dd>
+                <dd>Agosto, 2020.</dd>
+            </dl>
+        </article>
+        <article>
+            <h3>Referencias Personales</h3>
+        </article>
     </main>
 
 
