--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -53,7 +53,26 @@
             <h3>Referencias Personales</h3>
         </article>
     </main>
-
-
+    <aside>
+        <article>
+            <h3>Skills</h3>
+        </article>
+        <article>
+            <h3>Contacto</h3>
+            <ul>
+                <li>
+                    <a href="#"> WhatsApp</a>
+                </li>
+                <li>
+                    <a href="#">Correo Electrónico</a>
+                </li>
+                <li>
+                    <a href="#">Telefono Local</a>
+                </li>
+            </ul>
+            <h3>Ubicación</h3>
+            <p>Terrazas del Ávila, Edif. Verdeste, Apto. 2A. Caracas, Venezuela.</p>
+        </article>
+    </aside>
 </body>
 </html>
