--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -33,11 +33,12 @@
             <p>Terrazas del Ávila, Edif. Verdeste, Apto. 2A. Caracas, Venezuela.</p>
         </article>
     </aside>
-    <header>
+    <main>
+    <div class="Presentación">
         <h1>Norangel Marín</h1>
         <h2>Bachiller en Ciencias</h2>
-    </header>
-    <main>
+    </div>
+    <div class="Información">
         <article>
             <h3>Sobre mí...</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestiae natus eum et quo obcaecati a dignissimos cupiditate saepe, voluptatum earum itaque dolor? Asperiores esse rem, et velit ipsam sequi molestias dolorem, ipsa autem in minus quas labore excepturi. Nostrum minima quis vel fugiat totam accusantium suscipit molestias enim sit.</p>
@@ -73,6 +74,7 @@
         <article>
             <h3>Referencias Personales</h3>
         </article>
-    </main>
+    </div>
+</main>
 </body>
 </html>
