--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -7,7 +7,50 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <aside>
+    <main>
+            <div class="Presentación">
+                <h1>Norangel Marín</h1>
+                <h2>Bachiller en Ciencias</h2>
+            </div>
+            <div class="Información">
+                <article>
+                    <h3>Sobre mí...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestiae natus eum et quo obcaecati a dignissimos cupiditate saepe, voluptatum earum itaque dolor? Asperiores esse rem, et velit ipsam sequi molestias dolorem, ipsa autem in minus quas labore excepturi. Nostrum minima quis vel fugiat totam accusantium suscipit molestias enim sit.</p>
+                </article>
+                <article>
+                    <h3>Educación</h3>
+                    <dl>
+                        <dt>Unidad Educativa Colegio "Nuestra Señora del Camino"</dt>
+                        <dd>Hasta el 2018.</dd>
+                        <dd>Ubicado en Guatire-Edo.Miranda.</dd>
+                    </dl>
+                </article>
+                <article>
+                    <h3>Cursos</h3>
+                    <dl>
+                        <dt>Introducción al Desarrollo Web I</dt>
+                        <dd>Instituto de Economía Internacional - Universidad de Alicante, España.</dd>
+                        <dd>Enero, 2021</dd>
+
+                        <dt>Ciberseguridad en el Teletrabajo</dt>
+                        <dd>Instituto Nacional de Ciberseguridad, España.</dd>
+                        <dd>Diciembre, 2020</dd>
+
+                        <dt>Identidades Gráficas Efectivas</dt>
+                        <dd>Universidad Católica Andrés Bello, Venezuela.</dd>
+                        <dd>Agosto, 2020.</dd>
+
+                        <dt>Redacción en Redes Sociales</dt>
+                        <dd>Colegio Nacional de Periodistas, Venezuela.</dd>
+                        <dd>Agosto, 2020.</dd>
+                    </dl>
+                </article>
+                <article>
+                    <h3>Referencias Personales</h3>
+                </article>
+            </div>     
+    </main>
+    <aside class="Extras">
         <div>
             <img src="foto.jpeg" alt="Imagen Personal">
         </div>
@@ -33,48 +76,5 @@
             <p>Terrazas del Ávila, Edif. Verdeste, Apto. 2A. Caracas, Venezuela.</p>
         </article>
     </aside>
-    <main>
-    <div class="Presentación">
-        <h1>Norangel Marín</h1>
-        <h2>Bachiller en Ciencias</h2>
-    </div>
-    <div class="Información">
-        <article>
-            <h3>Sobre mí...</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestiae natus eum et quo obcaecati a dignissimos cupiditate saepe, voluptatum earum itaque dolor? Asperiores esse rem, et velit ipsam sequi molestias dolorem, ipsa autem in minus quas labore excepturi. Nostrum minima quis vel fugiat totam accusantium suscipit molestias enim sit.</p>
-        </article>
-        <article>
-            <h3>Educación</h3>
-            <dl>
-                <dt>Unidad Educativa Colegio "Nuestra Señora del Camino"</dt>
-                <dd>Hasta el 2018.</dd>
-                <dd>Ubicado en Guatire-Edo.Miranda.</dd>
-            </dl>
-        </article>
-        <article>
-            <h3>Cursos</h3>
-            <dl>
-                <dt>Introducción al Desarrollo Web I</dt>
-                <dd>Instituto de Economía Internacional - Universidad de Alicante, España.</dd>
-                <dd>Enero, 2021</dd>
-
-                <dt>Ciberseguridad en el Teletrabajo</dt>
-                <dd>Instituto Nacional de Ciberseguridad, España.</dd>
-                <dd>Diciembre, 2020</dd>
-
-                <dt>Identidades Gráficas Efectivas</dt>
-                <dd>Universidad Católica Andrés Bello, Venezuela.</dd>
-                <dd>Agosto, 2020.</dd>
-
-                <dt>Redacción en Redes Sociales</dt>
-                <dd>Colegio Nacional de Periodistas, Venezuela.</dd>
-                <dd>Agosto, 2020.</dd>
-            </dl>
-        </article>
-        <article>
-            <h3>Referencias Personales</h3>
-        </article>
-    </div>
-</main>
 </body>
 </html>
