--- a/PracticasHTML- CSS-JS/index.html
+++ b/PracticasHTML- CSS-JS/index.html
@@ -13,28 +13,29 @@
                 <h2>Bachiller en Ciencias</h2>
             </div>
             <div class="Información">
-                <article>
+                <article class="Sobre mi">
                     <h3>Sobre mí...</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium molestiae natus eum et quo obcaecati a dignissimos cupiditate saepe, voluptatum earum itaque dolor? Asperiores esse rem, et velit ipsam sequi molestias dolorem, ipsa autem in minus quas labore excepturi. Nostrum minima quis vel fugiat totam accusantium suscipit molestias enim sit.</p>
                 </article>
-                <article>
+                <article class="Experticia">
+                    <h3>Experticia</h3>
+                </article>
+                <article class="Educación">
                     <h3>Educación</h3>
                     <dl>
                         <dt>Unidad Educativa Colegio "Nuestra Señora del Camino"</dt>
                         <dd>Hasta el 2018.</dd>
                         <dd>Ubicado en Guatire-Edo.Miranda.</dd>
                     </dl>
-                </article>
-                <article>
                     <h3>Cursos</h3>
                     <dl>
                         <dt>Introducción al Desarrollo Web I</dt>
                         <dd>Instituto de Economía Internacional - Universidad de Alicante, España.</dd>
-                        <dd>Enero, 2021</dd>
+                        <dd>Enero, 2021.</dd>
 
                         <dt>Ciberseguridad en el Teletrabajo</dt>
                         <dd>Instituto Nacional de Ciberseguridad, España.</dd>
-                        <dd>Diciembre, 2020</dd>
+                        <dd>Diciembre, 2020.</dd>
 
                         <dt>Identidades Gráficas Efectivas</dt>
                         <dd>Universidad Católica Andrés Bello, Venezuela.</dd>
@@ -45,28 +46,38 @@
                         <dd>Agosto, 2020.</dd>
                     </dl>
                 </article>
-                <article>
+                <article class="Referencias">
                     <h3>Referencias Personales</h3>
+                    <a href="Ejemplo de Referencia Personal.pdf">
+                        <img src="referencia.jpg" alt="Referencia Personal 1">
+                    </a>
+                    <a href="Ejemplo de Referencia Personal.pdf">
+                        <img src="referencia.jpg" alt="Referencia Personal 2">
+                    </a>
+                    <a href="Ejemplo de Referencia Personal.pdf">
+                        <img src="referencia.jpg" alt="Referencia Personal 3">
+                    </a>
                 </article>
             </div>     
     </main>
     <aside class="Extras">
-        <div>
+        <div class="ImagenPersonal">
             <img src="foto.jpeg" alt="Imagen Personal">
         </div>
         <article>
             <h3>Skills</h3>
         </article>
+        <div class="InfoContacto">
         <article>
             <h3>Contacto</h3>
             <ul>
-                <li>
-                    <a href="#"> WhatsApp</a>
+                <li class="Contactos">
+                    <a href="#">WhatsApp</a>
                 </li>
-                <li>
+                <li class="Contactos">
                     <a href="#">Correo Electrónico</a>
                 </li>
-                <li>
+                <li class="Contactos">
                     <a href="#">Telefono Local</a>
                 </li>
             </ul>
@@ -75,6 +86,7 @@
             <h3>Ubicación</h3>
             <p>Terrazas del Ávila, Edif. Verdeste, Apto. 2A. Caracas, Venezuela.</p>
         </article>
+        </div>
     </aside>
 </body>
 </html>
